# gitlabform

./: .coveragerc  .dockerignore  .git-blame-ignore-revs  .gitignore  .gitlab-ci.example.yml  .lgtm.yml  .mypy.ini  .pre-commit-config.yaml  .travis.yml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FEATURES_DESIGN.md  GT_VS_GLF.md  IMPLEMENTATION_DESIGN.md  LICENSE  README.md  SECURITY.md  SUMMARY.md  Vagrantfile  alpine.Dockerfile  build_docker_images.sh  changelog.md  codecov.yml  config.yml  configuration.py  debian.Dockerfile  docker.sh  highlight.css  index.html  merge_request_approval_rules  mkdocs.yml  output.yaml  prek.toml  pyproject.toml  pytest.ini  run_gitlab_in_docker.sh  setup.py  (+6 more)
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: _main.yml  _prs.yml  _releases.yml  acceptance.yml  build-artifacts.yml  build.yml  codacy-analysis.yml  codacy.yml  code-ql.yml  code-quality.yml  codecov-upload.yml  codeql-analysis.yml  codeql.yml  dependabot-automerge.yml  docs.yml  integration.yml  linter-and-tests-for-tags.yml  linter-and-tests.yml  linter.yml  linters.yml  pr-ci-workflow.yml  pr-linter-and-tests.yml  pr_on_fork.yml  pr_on_main_repo.yml  prs-entrypoint-forks.yml  prs-entrypoint-main.yml  prs-entrypoint.yml  prs.yml  publish-docs.yml  publish-to-dockerhub.yml  publish-to-github.yml  publish-to-pypi.yml  release-please.yml  release.yml  security.yml  static-analysis.yml  tests-acceptance.yml  tests-premium.yml  tests-standard.yml  tests-ultimate.yml  (+2 more)
UPGRADING/: index.html
automation/: index.html
changelog/: index.html
configuration_reference/: index.html
contrib/: index.html
contrib/coding_guidelines/: index.html
contrib/implementation_design/: index.html
contrib/introduction/: index.html
contrib/local_development/: index.html
contrib/releases/: index.html
contrib/workflows/: index.html
dev/: Dockerfile  __init__.py  alpine.Dockerfile  await-healthy.sh  build_docker_images.sh  check_release_type.py  common.py  debian.Dockerfile  docker.py  docs.py  env.py  gitlab.rb  healthcheck-and-setup.sh  infra.py  main.py  manage.py  package.py  qa.py  release.py  run_gitlab_in_docker.sh  run_gitlab_in_docker_ci.sh  tests.Dockerfile  yaml_tags_example.py
dev/gitlab/: await-healthy.sh  gitlab.rb  healthcheck-and-setup.sh  run_gitlab_in_docker.sh
docs/: .gitlab-ci.example.yml  AUTOMATE_FOR_NEW_PROJECTS.md  CONFIG-V5-COMPLETE.md  CONFIG-V5-IMPLEMENTATION.md  CONFIG-V5-TYPED-PARSER.md  FEATURES_DESIGN.md  GT_VS_GLF.md  IMPLEMENTATION_DESIGN.md  UPGRADING.md  automation.md  changelog.md  config-v5-qa.md  config-v5-schema.json  config-v5-syntax-comparison.md  config-v5-tags.md  features.md  index.md  installation.md  legal.md  quick_start.md  requirements.md  running.md  similar_apps.md  upgrade.md
docs/contrib/: coding_guidelines.md  implementation_design.md  index.md  local_development.md  releases.md  schema_development.md  workflows.md
docs/reference/: avatar.md  badges.md  ci_cd_variables.md  deploy_keys.md  files.md  group_ldap_links.md  group_saml_links.md  index.md  integrations.md  job_token_scope.md  labels.md  members.md  merge_requests.md  pipeline_schedules.md  project_security_settings.md  project_transfer.md  protected_branches.md  protected_environments.md  push_mirrors.md  push_rules.md  resource_group.md  resource_groups.md  settings.md  tags_protection.md  topics.md  webhooks.md
docs_new/: automation.md  changelog.md  configuration_reference.md  index.md  installation.md  legal.md  quick_start.md  running.md  similar_apps.md
docs_new/contrib/: coding_guidelines.md  implementation_design.md  index.md  introduction.md  local_development.md  releases.md
docs_new/reference/: archive_unarchive.md  ci_cd_variables.md  deploy_keys.md  files.md  group_ldap_links.md  index.md  merge_requests.md  project_settings.md  protected_branches.md
features/: index.html
gitlab-config/: config.yml  gitlab-config.md
gitlabform/: __init__.py  constants.py  core.py  filter.py  input.py  output.py  run.py  transform.py  ui.py  util.py
gitlabform/common/: safe_dict.py
gitlabform/configuration/: __init__.py  case_insensitive_project_and_groups.py  case_insensitivity.py  common.py  config_chain.py  config_v5_base.py  config_v5_objects.py  config_v5_parser.py  config_v5_typed_parser.py  core.py  groups.py  project_path.py  projects.py  projects_and_groups.py  projects_and_groups_v2.py  single_config.py  special_keys.py  transform.py  yaml_tags.py
gitlabform/gitlab/: __init__.py  branches.py  commits.py  core.py  environments.py  group_avatar.py  group_badges.py  group_ldap_links.py  group_merge_requests_approvals.py  group_push_rule.py  group_push_rules.py  group_saml_links.py  group_secret_variables.py  group_variables.py  groups.py  integrations.py  keys.py  members.py  merge_requests.py  pipelines.py  project_avatar.py  project_badges.py  project_deploy_keys.py  project_merge_requests_approvals.py  project_mr_approvals.py  project_protected_environments.py  project_secret_variables.py  project_security_settings.py  projects (conflicted).py  projects.py  python_gitlab.py  repositories.py  resource_group.py  resource_groups.py  schedules.py  services.py  tags.py  users.py  variables.py
gitlabform/gitlabform/: __init__.py  core.py  run.py  secret_variables.py  ui.py
gitlabform/input/: core.py  filter.py  groups.py  projects.py
gitlabform/lists/: __init__.py  filter.py  groups.py  projects.py
gitlabform/processors/: __init__.py  abstract_processor.py  defining_keys.py  multiple_entities_processor.py  single_entity_processor.py
gitlabform/test/: __init__.py  conftest.py  test_files.py  test_group_members.py  test_group_shared_with.py  test_members.py  test_secret_variables.py  test_tags.py
installation/: index.html
legal/: index.html
main_concepts/: index.html
quick_start/: index.html
reference/: index.html
requirements/: index.html
running/: index.html
search/: search_index.json
similar_apps/: index.html
upgrade/: index.html
(+307 files in other folders)
