[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[project]
name = "gitlabform"
version = "5.3.0"
authors = [{ name = "Greg Dubicki and Contributors" }]
description = "🏗 Specialized configuration as a code tool for GitLab projects, groups and more using hierarchical configuration written in YAML"
keywords = ["cli", "yaml", "gitlab", "configuration-as-code"]
# there's an issue with the below line as of Feb 2025, see https://stackoverflow.com/q/74818677/2693875
#license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.14",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Version Control :: Git",
]
requires-python = ">=3.12.0"
dependencies = [
    "certifi==2026.2.25",
    "Jinja2==3.1.6",
    "luddite==1.0.4",
    "MarkupSafe==3.0.3",
    "mergedeep==1.3.4",
    "packaging==26.0",
    "python-gitlab[graphql]==8.2.0",
    "requests==2.33.1",
    "rich==15.0.0",
    # yamlpath and ruamel and tightly coupled, currently 0.19.1 of ruamel and 3.9.0 of yamlpath break support for
    # yaml 1.1 "yes" -> True conversion. If we want to upgrade we'd need to make a breaking-change and drop support for
    # unannotated yaml 1.1
    "ruamel.yaml==0.17.21",
    "yamlpath==3.8.2",
    # ez_yaml >1.2.0 changes imports and also uses ruamel.yaml tied to 1.2 so wouldn't support "yes" as True
    "ez-yaml==1.2.0",
]

[project.urls]
Homepage = "https://gitlabform.github.io/gitlabform/"
Repository = "https://github.com/gitlabform/gitlabform.git"
Issues = "https://github.com/gitlabform/gitlabform/issues"
Changelog = "https://gitlabform.github.io/gitlabform/changelog/"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[dependency-groups]
dev = [
    "prek==0.3.8",
    "commitizen==4.3.0",
    "twine==6.1.0",
    "check-wheel-contents==0.6.1",
]

test = [
    "bandit==1.8.3",
    "black==26.3.0",
    "codespell==2.4.1",
    "coverage==7.13.5",
    "cryptography==46.0.7",
    "deepdiff==9.0.0",
    "mypy==1.20.1",
    "mypy-extensions==1.1.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-rerunfailures==16.1",
    "ruff==0.9.0",
    "types-requests==2.33.0.20260408",
    "xkcdpass==1.30.0",
]
docs = [
    "mkdocs",
    "mkdocs-material",
]

[project.scripts]
gitlabform = "gitlabform.run:run"
setup = "dev.manage:setup"
lint = "dev.manage:lint"
format = "dev.manage:format_code"
test = "dev.manage:test"
clean = "dev.manage:clean"
build = "dev.manage:build"
verify = "dev.manage:verify"

[tool.hatch.build.targets.wheel]
packages = ["gitlabform"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "requires_license: marks tests which require GitLab paid (Premium) license",
    "requires_ultimate_license: marks tests which require GitLab paid (Ultimate) license)",
    "ce: marks tests which need to be run against GitLab CE image as well as the standard EE image"
]

[tool.black]
line-length = 120

[tool.uv]
default-groups = ["dev", "test", "docs"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_provider = "pep621"
