[build-system]
# Modern build backend (PEP 517). Pinned for reproducibility.
# hatchling is preferred for uv-centric projects.
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

# Build backend configuration.
[tool.hatch.build.targets.wheel]
packages = ["gitlabform"]

[project]
name = "gitlabform"
version = "5.3.0"
requires-python = ">=3.12.0"
authors = [{ name = "Greg Dubicki and Contributors" }]
description = "🏗 Specialized configuration as a code tool for GitLab projects, groups and more using hierarchical configuration written in YAML"
keywords = ["cli", "yaml", "gitlab", "configuration-as-code"]
# there's an issue with the below line as of Feb 2025, see https://stackoverflow.com/q/74818677/2693875
#license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.14",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Version Control :: Git",
]

# Main runtime dependencies. Pinned strictly to ensure production stability.
dependencies = [
    "certifi==2026.2.25",
    "cli-ui==0.19.0",
    "ez-yaml==1.2.0",
    "jinja2==3.1.6",
    "luddite==1.0.4",
    "markupsafe==3.0.3",
    "mergedeep==1.3.4",
    "packaging==26.0",
    "python-gitlab[graphql]==8.2.0",
    "requests==2.33.1",
    "rich==15.0.0",
    # yamlpath and ruamel and tightly coupled, currently 0.19.1 of ruamel and 3.9.0 of yamlpath break support for
    # yaml 1.1 "yes" -> True conversion. If we want to upgrade we'd need to make a breaking-change and drop support for
    # unannotated yaml 1.1
    "ruamel.yaml==0.17.21",
    "yamlpath==3.8.2",
    # ez_yaml >1.2.0 changes imports and also uses ruamel.yaml tied to 1.2 so wouldn't support "yes" as True
    "ez-yaml==1.2.0",
]

# PEP 735 Dependency Groups.
# Managed by uv. dev is the parent group for local development.
[dependency-groups]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "docs" },
    "check-wheel-contents==0.6.1",
    "commitizen==4.3.0",
    "prek==0.3.8",
    "rich==13.9.4",
    "twine==6.1.0",
]
# Minimum set of dependencies required to execute the test suite.
test = [
    "coverage==7.13.5",
    "cryptography==46.0.6",
    "deepdiff==9.0.0",
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
    "pytest-rerunfailures==16.1",
    "xkcdpass==1.30.0",
]
# Static analysis and formatting tools.
lint = [
    "bandit==1.8.3",
    "black==26.3.0",
    "codespell==2.4.1",
    "mypy==1.19.1",
    "mypy-extensions==1.1.0",
    "ruff==0.9.0",
    "types-requests==2.33.0.20260327",
]
# Documentation generation stack.
docs = [
    "mkdocs",
    "mkdocs-material",
]

[project.urls]
Homepage = "https://gitlabform.github.io/gitlabform/"
Repository = "https://github.com/gitlabform/gitlabform.git"
Issues = "https://github.com/gitlabform/gitlabform/issues"
Changelog = "https://gitlabform.github.io/gitlabform/changelog/"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[dependency-groups]
dev = [
    "prek==0.3.8",
    "commitizen==4.3.0",
    "twine==6.1.0",
    "check-wheel-contents==0.6.1",
]

test = [
    "bandit==1.8.3",
    "black==26.3.0",
    "codespell==2.4.1",
    "coverage==7.13.5",
    "cryptography==46.0.7",
    "deepdiff==9.0.0",
    "mypy==1.20.1",
    "mypy-extensions==1.1.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-rerunfailures==16.1",
    "ruff==0.9.0",
    "types-requests==2.33.0.20260408",
    "xkcdpass==1.30.0",
]
docs = [
    "mkdocs",
    "mkdocs-material",
]

# Commands available via 'uv run <command>' or entry points after installation.
[project.scripts]
# Primary application entrypoint
gitlabform = "gitlabform.run:run"

# Development toolkit and environment management
dev = "dev.main:main"
setup = "dev.main:setup"
clean = "dev.main:clean"

# Development workflow (Linting, Formatting, and Testing)
format = "dev.main:format_code"
lint = "dev.main:lint"
test = "dev.main:test"

# Local infrastructure management
gitlab-local = "dev.main:gitlab_local"

# Documentation workflow
docs-serve = "dev.main:docs_serve"
docs-build = "dev.main:docs_build"

# Packaging and distribution verification
build = "dev.main:build"
verify = "dev.main:verify"
docker-build = "dev.main:docker_build"
docker-verify = "dev.main:docker_verify"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "requires_license: marks tests which require GitLab paid (Premium) license",
    "requires_ultimate_license: marks tests which require GitLab paid (Ultimate) license)",
    "ce: marks tests which need to be run against GitLab CE image as well as the standard EE image"
]

[tool.black]
line-length = 120

# uv specific configuration.
[tool.uv]
# Ensures 'uv sync' or 'uv run' implicitly includes development tools.
default-groups = ["dev"]

[tool.commitizen]
# Configuration for conventional commit enforcement and version management.
name = "cz_conventional_commits"
tag_format = "v$version"
version_provider = "pep621"
